--- a/template/template.tex
+++ b/template/template.tex
@@ -9,11 +9,13 @@
 \usepackage{listings}
 
 \setlist[enumerate]{label=(\alph*)}
-
 \title{Pset \#}
 
 \begin{document}
-\date{February 1, 2022 }
+
+\newcommand{\Not}{\textbf{not}}
+
+\date{\#, 2022 }
 \author{Darwin Do}
 
 \maketitle
