--- a/template/template.tex
+++ b/template/template.tex
@@ -14,6 +14,9 @@
 \begin{document}
 
 \newcommand{\Not}{\textbf{not}}
+\newcommand{\AAnd}{\textbf{and}}
+\newcommand{\True}{\texttt{True}}
+\newcommand{\False}{\texttt{False}}
 
 \date{\#, 2022 }
 \author{Darwin Do}
