--- a/template/template.tex
+++ b/template/template.tex
@@ -15,6 +15,7 @@
 
 \newcommand{\Not}{\textbf{not}}
 \newcommand{\AAnd}{\textbf{and}}
+\newcommand{\Or}{\textbf{or}}
 \newcommand{\True}{\texttt{True}}
 \newcommand{\False}{\texttt{False}}
 
